--- a/clients/react-client/package.json
+++ b/clients/react-client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@dojoengine/core": "1.0.0-alpha.5",
     "@dojoengine/recs": "^2.0.13",
+    "@dojoengine/create-burner": "1.0.0-alpha.5",
     "@dojoengine/torii-client": "1.0.0-alpha.5",
     "@radix-ui/react-slot": "^1.1.0",
     "@types/node": "^22.4.2",
