--- a/contracts/Scarb.toml
+++ b/contracts/Scarb.toml
@@ -10,6 +10,8 @@ sierra-replace-ids = true
 migrate = "sozo build && sozo migrate apply"
 
 [dependencies]
-dojo = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.7" }
+dojo = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.8" }
+haiku_event = { git = "https://github.com/edisontim/haiku" }
 
 [[target.dojo]]
+build-external-contracts = [ "haiku_event::PromptMessage" ]
